fixed server overflow issue

--- a/react-app/src/components/SideBar/Sidebar.css
+++ b/react-app/src/components/SideBar/Sidebar.css
@@ -4,7 +4,8 @@
     flex: 0.25;
     height: 100vh;
     background-color: #2f3135;
- 
+    overflow-y: scroll;
+
 }
 
 .sideBarTop{
@@ -16,6 +17,9 @@
     background-color: #2f3135;
     color: white;
     border-bottom: 3px solid #26282c;
+    overflow: scroll;
+    height: 30vh;
+
 
 }
 
@@ -24,6 +28,8 @@
     display:flex;
     flex-direction: row;
     align-items: center;
+    padding-right: 10px;
+
 }
 
 #addServer{
@@ -38,6 +44,7 @@
     height: 30px;
     width: 100%;
     padding: 13px;
+
 }
 
 .serverIcon{
